--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -28,6 +28,10 @@
       <div style="text-align: center">
         <img src="/images/book.svg" height="32" alt="stack" />&nbsp;<a href="{{ .Site.Params.notes.url }}">{{ .Site.Params.notes.description }}</a>
       </div>
+        <div style="font-size: 8px; position:absolute; bottom: 10px">Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a
+                href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a
+                href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC
+            3.0 BY</a></div>
     </header>
     <main class="app-container">
       {{ block "main" . }}
