--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,7 +26,8 @@
         {{ end }}
       </div>
       <div style="text-align: center">
-        <img src="/images/book.svg" height="32" alt="stack" />&nbsp;<a href="{{ .Site.Params.notes.url }}">{{ .Site.Params.notes.description }}</a>
+        <img src="/images/book.svg" height="32" alt="stack" />&nbsp;
+        <a href="{{ .Site.Params.notes.url }}" target="_blank">{{ .Site.Params.notes.description }}</a>
       </div>
         <div style="font-size: 8px; position:absolute; bottom: 10px">Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a
                 href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a
