Add What's a Functor post

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -21,7 +21,7 @@
         <div>
           {{ .Site.Params.description | default "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vehicula turpis sit amet elit pretium." }}
         </div>
-        <div style="display: flex; align-items: center">@&nbsp;<img src="/images/Pivotal_Software_logo.svg" height="16" alt="Pivotal" /></div>
+        <div style="display: flex; align-items: center">@&nbsp;<a href="https://tanzu.vmware.com/labs" target="_blank">VMWare Pivotal Labs</a></div>
       </div>
       <div class="app-header-social">
         {{ range .Site.Params.social }}
