--- a/themes/minimal/layouts/partials/list-item.html
+++ b/themes/minimal/layouts/partials/list-item.html
@@ -18,6 +18,6 @@
 
     <h4><a href="{{ .Scratch.Get "link" }}">{{ .Title }}</a></h4>
     <h5>{{ $.Scratch.Get "subheader" }}</h5>
-    {{ partial "tags" . }}
+    <!-- {{ partial "tags" . }} -->
 
 </div>
