--- a/static/css/extend.css
+++ b/static/css/extend.css
@@ -8,6 +8,7 @@ main {
 
 p {
     font-size: 16px;
+    margin: 20px 0px !important;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased !important;
   -moz-font-smoothing: antialiased !important;
